tests/compilation/local.stderr
error[E0277]: `NonNull<()>` cannot be sent between threads safely
 --> tests/compilation/local.rs:7:17
  |
7 |     assert_send(&f);
  |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
 --> src/storage.rs
  |
  | pub struct Box(NonNull<()>);
  |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::sync::SyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>>`
 --> src/storage.rs
  |
  | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
  |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
 --> src/sync.rs
  |
  | pub struct LocalDynFn<
  |            ^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compilation/local.rs:3:19
  |
3 | fn assert_send<T: Send>(_: &T) {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
 --> tests/compilation/local.rs:8:17
  |
8 |     assert_sync(&f);
  |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
 --> src/storage.rs
  |
  | pub struct Box(NonNull<()>);
  |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::sync::SyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>>`
 --> src/storage.rs
  |
  | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
  |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
 --> src/sync.rs
  |
  | pub struct LocalDynFn<
  |            ^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/compilation/local.rs:4:19
  |
4 | fn assert_sync<T: Send>(_: &T) {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:12:17
   |
12 |     assert_send(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::sync::SyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnMut<
   |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:13:17
   |
13 |     assert_sync(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::sync::SyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnMut<
   |            ^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:17:17
   |
17 |     assert_send(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::sync::SyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnOnce<
   |            ^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:18:17
   |
18 |     assert_sync(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::sync::SyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnOnce<
   |            ^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:22:17
   |
22 |     assert_send(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFn<
   |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:23:17
   |
23 |     assert_sync(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFn<
   |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         let call = |fut: &mut _| unsafe {
   | |             (self.storage.vtable.call)(self.storage.ptr(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be shared between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Sync` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFn<
   |            ^^^^^^^^^^^^^^^
   = note: required for `&dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>` to implement `Send`
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         let call = |fut: &mut _| unsafe {
   | |             (self.storage.vtable.call)(self.storage.ptr(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `dyn_fn::storage::Raw<128, 8>`
  --> src/storage.rs
   |
   | pub struct Raw<
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `ManuallyDrop<RawOrBox<128, 8>>`
  --> $RUST/core/src/mem/manually_drop.rs
   |
   | pub struct ManuallyDrop<T: ?Sized> {
   |            ^^^^^^^^^^^^
note: required because it appears within the type `MaybeUninit<RawOrBox<128, 8>>`
  --> $RUST/core/src/mem/maybe_uninit.rs
   |
   | pub union MaybeUninit<T> {
   |           ^^^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         let call = |fut: &mut _| unsafe {
   | |             (self.storage.vtable.call)(self.storage.ptr(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:28:17
   |
28 |     assert_send(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnMut<
   |            ^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:29:17
   |
29 |     assert_sync(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnMut<
   |            ^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ----------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         let call = |fut: &mut _| unsafe {
   | |             (self.storage.vtable.call)(self.storage.ptr_mut(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be shared between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `NonNull<()>`
   = note: required for `&NonNull<()>` to implement `Send`
note: required because it's used within this closure
  --> src/async.rs
   |
   |     let _guard = DropGuard(|| unsafe { (vtable.drop)(future_ptr) });
   |                            ^^
note: required because it appears within the type `dyn_fn::r#async::async_call::{closure#0}::DropGuard<{closure@dyn_fn::r#async::async_call<'_, RawOrBox<128, 8>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, {closure@dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>::call<'_>::{closure#0}::{closure#0}}>::{closure#0}::{closure#0}}>`
  --> src/async.rs
   |
   |     struct DropGuard<F: FnMut()>(F);
   |            ^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         let call = |fut: &mut _| unsafe {
   | |             (self.storage.vtable.call)(self.storage.ptr_mut(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ----------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `dyn_fn::storage::Raw<128, 8>`
  --> src/storage.rs
   |
   | pub struct Raw<
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `ManuallyDrop<RawOrBox<128, 8>>`
  --> $RUST/core/src/mem/manually_drop.rs
   |
   | pub struct ManuallyDrop<T: ?Sized> {
   |            ^^^^^^^^^^^^
note: required because it appears within the type `MaybeUninit<RawOrBox<128, 8>>`
  --> $RUST/core/src/mem/maybe_uninit.rs
   |
   | pub union MaybeUninit<T> {
   |           ^^^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         let call = |fut: &mut _| unsafe {
   | |             (self.storage.vtable.call)(self.storage.ptr_mut(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:34:17
   |
34 |     assert_send(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnOnce<
   |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:35:17
   |
35 |     assert_sync(&f);
   |     ----------- ^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnOnce<
   |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------ within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `storage::DynStorage<dyn_fn::storage::Box, dyn_fn::r#async::AsyncVTable<dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, RawOrBox<128, 8>>>`
  --> src/storage.rs
   |
   | pub(crate) struct DynStorage<S: Storage, VT: VTable> {
   |                   ^^^^^^^^^^
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnOnce<
   |            ^^^^^^^^^^^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         let mut storage = ManuallyDrop::new(self.storage);
   | |         let call = |fut: &mut _| unsafe {
   | |             (storage.vtable.call)(storage.ptr_mut(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be shared between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `NonNull<()>`
   = note: required for `&NonNull<()>` to implement `Send`
note: required because it's used within this closure
  --> src/async.rs
   |
   |     let _guard = DropGuard(|| unsafe { (vtable.drop)(future_ptr) });
   |                            ^^
note: required because it appears within the type `dyn_fn::r#async::async_call::{closure#0}::DropGuard<{closure@dyn_fn::r#async::async_call<'_, RawOrBox<128, 8>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, {closure@dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>::call<'_>::{closure#0}::{closure#0}}>::{closure#0}::{closure#0}}>`
  --> src/async.rs
   |
   |     struct DropGuard<F: FnMut()>(F);
   |            ^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         let mut storage = ManuallyDrop::new(self.storage);
   | |         let call = |fut: &mut _| unsafe {
   | |             (storage.vtable.call)(storage.ptr_mut(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------ within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `dyn_fn::storage::Raw<128, 8>`
  --> src/storage.rs
   |
   | pub struct Raw<
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `ManuallyDrop<RawOrBox<128, 8>>`
  --> $RUST/core/src/mem/manually_drop.rs
   |
   | pub struct ManuallyDrop<T: ?Sized> {
   |            ^^^^^^^^^^^^
note: required because it appears within the type `MaybeUninit<RawOrBox<128, 8>>`
  --> $RUST/core/src/mem/maybe_uninit.rs
   |
   | pub union MaybeUninit<T> {
   |           ^^^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |   ) -> Ret::Of<'a> {
   |  __________________^
   | |     let mut future = MaybeUninit::<FutureStorage>::uninit();
   | |     let vtable = call(&mut future);
   | |     let future_ptr = unsafe { future.assume_init_mut().ptr_mut() };
...  |
   | |     poll_fn(|cx| unsafe { (vtable.poll)(future_ptr, cx, PhantomData) }).await
   | | }
   | |_^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         let mut storage = ManuallyDrop::new(self.storage);
   | |         let call = |fut: &mut _| unsafe {
   | |             (storage.vtable.call)(storage.ptr_mut(), arg, fut, PhantomData)
   | |         };
   | |         unsafe { async_call(call) }.await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`
